# actix_crud

./: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220602_000001_create_session_table.rs  m20220602_000001_create_user_table.rs  m20220602_000002_create_post_table.rs
src/: main.rs
src/api/: error.rs  health.rs  mod.rs  post_api.rs  user_api.rs
src/entities/: mod.rs  post.rs  prelude.rs  session.rs  user.rs
src/models/: mod.rs
src/repositories/: post_repository.rs  user_repository.rs
