[package]
name = "actix-backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-web-validator = "5.0.1"
serde = {version="1.0.144", features=["derive"]}
uuid = {version="1.1.2", features=["v4"]}
env_logger="0.9.0"
log="0.4.17"
strum_macros="0.24.3"
strum={version="0.24.1", features=["derive"]}
derive_more = "0.99.17"
sea-orm={version="0.9.2", features=["sqlx-postgres","runtime-async-std-native-tls", "macros"]}
sea-orm-migration="0.9"
migration = {path="migration"}
validator = { version = "0.16", features = ["derive"] }
rust-argon2 = "1.0"